finished full draft (for assignment)

--- a/style.css
+++ b/style.css
@@ -2,6 +2,16 @@
     font-family: Helvetica, sans-serif;
    }
 
+
+.thumbnail {
+    display: grid;
+    grid-auto-rows: 75px;
+    border: 1px solid #666;
+    padding: 65px;
+    grid-gap: 10px;
+    text-align: center;
+}
+
 footer {
     text-align: center;
 }
